added heading tag and md file

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 </head>
 <body>
-
+    <h1>This is my first github project using by terminal</h1>
     <h3>Morning Work List Item</h3>
   
     <ol id="order-1">
