add paragraph tag

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <h1>This is my first github project using by terminal</h1>
     <h3>Morning Work List Item</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore sed dolor, dicta similique earum temporibus consectetur!</p>
   
     <ol id="order-1">
         <li>Morning Walk</li>
