--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <h1>This is my first github project using by terminal</h1>
     <h3>Morning Work List Item</h3>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore sed dolor, dicta similique earum temporibus consectetur!</p>
+    <img class="portfolio-img" src="./images/khan1.png"  width="30%" height="30%" alt="">
   
     <ol id="order-1">
         <li>Morning Walk</li>
