second branch paragraph tag code

--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
         <img class="portfolio-img" src="./images/khan.jpg" alt="web-designer">
         <h2>Web Designer</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem expedita consequuntur nobis voluptatum at nesciunt?</p>
+        <p>Talking from second branch</p>
+        <p>yeah this is second branch</p>
    
     </div>
     <div class="box-model">
