more paragraph tag add in the second branch

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem expedita consequuntur nobis voluptatum at nesciunt?</p>
         <p>Talking from second branch</p>
         <p>yeah this is second branch</p>
+        <p>added more code form the second branch</p>
    
     </div>
     <div class="box-model">
