this is another image add

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <h3>Morning Work List Item</h3>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore sed dolor, dicta similique earum temporibus consectetur!</p>
     <img class="portfolio-img" src="./images/khan1.png"  width="30%" height="30%" alt="">
+    <img class="portfolio-img" src="./images/khan3.png"  width="30%" height="30%" alt="">
+    
   
     <ol id="order-1">
         <li>Morning Walk</li>
